[package]
name = "rusty_tcp"
version = "0.1.0"
authors = ["Franco Kurte"]
description = "A Rust library network packet capture using eBPF and XDP."
license = "MIT"
repository = "https://github.com/FrancoKurte/rusty-tcp"
edition = "2021"
readme = "README.md"

[dependencies]
anyhow = "1.0.97"
libc = "0.2.170"
nix = { version = "0.29.0", features = ["net"] }

[build-dependencies]
cc = "1.2.16"

[lib]
name = "rusty_tcp"
path = "src/lib.rs"
